# gcc-build-tracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: events.cpp  events.hpp  plugin.cpp  timer.cpp  timer.hpp
